--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/ucastnik.zul
@@ -41,7 +41,6 @@
 				    </tabs>
 				    <tabpanels>
 				    	<tabpanel>
-				    	
 				    		<!-- Ucastnik -->
 							<grid sclass="scb-form-grid-2">
 								<rows>
@@ -56,7 +55,6 @@
 													sclass="form-input-text"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													readonly="@load(vm.isItemReadOnly())"
-													tabindex="1"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
@@ -77,7 +75,6 @@
 													sclass="form-input-text"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													readonly="@load(vm.isItemReadOnly())"
-													tabindex="2"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
@@ -99,8 +96,7 @@
 					                            		placeholder="*"
 					                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 					                            		readonly="@load(vm.isItemReadOnly())"
-					                            		buttonVisible="@load(!vm.isItemReadOnly())"
-					                            		tabindex="3" />
+					                            		buttonVisible="@load(!vm.isItemReadOnly())" />
 													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
 																<label value="@bind(vmsgs[particBirthdate])" />
@@ -115,7 +111,6 @@
 					                            		placeholder="*"
 					                            		sclass="form-input-text"
 					                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-					                            		tabindex="4"
 					                            		hflex="1" />
 													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
@@ -137,7 +132,6 @@
 													sclass="form-input-text"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													readonly="@load(vm.isItemReadOnly())"
-													tabindex="5"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
@@ -153,111 +147,26 @@
 												<label value="${c:l('txt.ui.application.healthInfo')}"/>
 												<textbox rows="3" hflex="3" multiline="true"
 													value="@bind(fx.participant.courseParticipant.healthInfo)"
-													tabindex="6"
 													readonly="@load(vm.isItemReadOnly())"
 													sclass="form-input-textarea"
 													maxlength="@load(vm.getHealthInfoMaxlength())" />
 											</vbox>
 										</cell>
 									</row>
+									<!-- Adresa -->
+									<row>
+										<cell>
+											<ruian-address contact="${vm.participant.courseParticipant.contact}" contactDisabled="${vm.isItemReadOnly()}" />
+										</cell>
+									</row>
 								</rows>
 							</grid>
 							
-							<groupbox width="100%" style="margin-top:20px;" >
-				                <caption hflex="1">
-				                    <label value="${c:l('txt.ui.common.Address')}" style="font-weight: bold;"/>
-				                </caption>
-			                    <grid sclass="scb-form-grid-2" hflex="1">
-									<rows>
-										<row>
-											<cell>
-												<vbox hflex="1">
-													<label value="${c:l('txt.ui.common.street')}"/>
-													<textbox id="particStreet"
-														value="@bind(fx.participant.courseParticipant.contact.street)"
-														maxlength="240"
-														sclass="form-input-text"
-														tabindex="7"
-														hflex="1" />
-												</vbox>
-											</cell>
-										</row>
-										<row>
-											<cell>
-												<hbox hflex="1">
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.common.landRegNo')}"/>
-														<intbox id="particLandRegNo"
-															value="@bind(fx.participant.courseParticipant.contact.landRegistryNumber)"
-															maxlength="8"
-															placeholder="*"
-															constraint="no empty"
-															sclass="form-input-text"
-															tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-															tabindex="6"
-															hflex="1" />
-													</vbox>
-													<vbox hflex="1">
-														<label value="${c:l('txt.ui.common.houseNo')}"/>
-														<intbox id="particHouseNo"
-															value="@bind(fx.participant.courseParticipant.contact.houseNumber)"
-															maxlength="6"
-															sclass="form-input-text"
-															tabindex="9"
-															hflex="1" />
-													</vbox>
-												</hbox>
-											</cell>
-										</row>
-										<row>
-											<cell sclass="form-grid-cell">
-												<vbox hflex="1">
-													<label value="${c:l('txt.ui.common.city')}"/>
-													<textbox id="particCity"
-														value="@bind(fx.participant.courseParticipant.contact.city) @validator(vm.notNullValidator)"
-														maxlength="240"
-														placeholder="*"
-														sclass="form-input-text"
-														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-														tabindex="10"
-														hflex="1" />
-													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particCity])" >
-															<label value="@bind(vmsgs[particCity])" />
-														</span>
-													</hbox>
-												</vbox>
-											</cell>
-										</row>
-										<row>
-											<cell sclass="form-grid-cell">
-												<vbox hflex="1">
-													<label value="${c:l('txt.ui.common.zipCode')}"/>
-													<textbox id="particZipCode"
-														value="@bind(fx.participant.courseParticipant.contact.zipCode) @validator(vm.notNullValidator)"
-														maxlength="32"
-														placeholder="*"
-														sclass="form-input-text"
-														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-														tabindex="11"
-														hflex="1" />
-													<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-														<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particZipCode])" >
-															<label value="@bind(vmsgs[particZipCode])" />
-														</span>
-													</hbox>
-												</vbox>
-											</cell>
-										</row>
-									</rows>
-								</grid>
-				            </groupbox>
-				            
 							<hbox>
 								<vbox>
-									<button label="Uložit"
+									<button label="${c:l('txt.ui.common.Save')}"
 										onClick="@command('submit')"
-										tabindex="12" 
+										sclass="btn-success"
 										visible="@load(!vm.isItemReadOnly())"
 										iconSclass="z-icon-check" />
 								</vbox>
@@ -283,7 +192,6 @@
 														sclass="form-input-text"
 														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 														readonly="true"
-														tabindex="11"
 														hflex="1" />
 												</hbox>
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -306,7 +214,6 @@
 													sclass="form-input-text"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													readonly="@load(vm.isItemReadOnly())"
-													tabindex="7"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeFirstname])" >
@@ -328,7 +235,6 @@
 													sclass="form-input-text"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													readonly="@load(vm.isItemReadOnly())"
-													tabindex="8"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeSurname])" >
@@ -350,7 +256,6 @@
 													sclass="form-input-text"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													readonly="@load(vm.isItemReadOnly())"
-													tabindex="9"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativePhone1])" >
@@ -370,7 +275,6 @@
 													readonly="@load(vm.isItemReadOnly())"
 													maxlength="@load(vm.getPhoneMaxlength())"
 													sclass="form-input-text"
-													tabindex="10"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													
@@ -388,7 +292,6 @@
 													readonly="@load(vm.isItemReadOnly())"
 													maxlength="@load(vm.getEmailMaxlength())"
 													sclass="form-input-text"
-													tabindex="12"
 													hflex="1" />
 												<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 													<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail2])" >
