--- a/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/shared/prihlaska-do-klubu.zul
@@ -70,7 +70,6 @@
 													focus="${!vm.courseSelectionRequired}"
 													tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 													onChange="@command('validateUniqueUsernameCmd', email=self.value, fx=fx)"
-													tabindex="1"
 													hflex="1" />
 												<a iconSclass="z-icon-info-circle big-icon" popup="emailPopup" style="margin-left: 5px; position:relative;top: 5px" />
 											</hbox>
@@ -93,7 +92,6 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="2"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeFirstname])" >
@@ -114,7 +112,6 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="3"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeSurname])" >
@@ -135,7 +132,6 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="4"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativePhone1])" >
@@ -154,7 +150,6 @@
 												value="@bind(fx.application.courseParticRepresentative.contact.phone2)"
 												maxlength="@load(vm.getPhoneMaxlength())"
 												sclass="form-input-text"
-												tabindex="5"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												
@@ -171,7 +166,6 @@
 												value="@bind(fx.application.courseParticRepresentative.contact.email2) @validator(vm.emailValidator)"
 												maxlength="@load(vm.getEmailMaxlength())"
 												sclass="form-input-text"
-												tabindex="6"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[representativeEmail2])" >
@@ -203,7 +197,6 @@
 			                            		sclass="form-input-text"
 			                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 			                            		onChange="@command('validateUniquePersonalNumberCmd', personal_number=self.value, fx=fx)"
-			                            		tabindex="7"
 			                            		hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthNumber])" >
@@ -223,7 +216,6 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="8"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" visible="@load(not empty vmsgs[particFirstname])" >
@@ -235,7 +227,7 @@
 								</row>
 								
 								<row>
-									<cell  >
+									<cell>
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.surname')}"/>
 											<textbox id="particSurname" readonly="@load(!vm.editMode)"
@@ -244,7 +236,6 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="9"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particSurname])" >
@@ -255,97 +246,13 @@
 									</cell>
 								</row>
 								
+								<!-- Adresa -->
 								<row>
-									<cell  >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.street')}"/>
-											<textbox id="particStreet" readonly="@load(!vm.editMode)"
-												value="@bind(fx.application.courseParticipant.contact.street)"
-												maxlength="240"
-												sclass="form-input-text"
-												tabindex="10"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-											</hbox>
-										</vbox>
+									<cell>
+										<ruian-address contact="${vm.application.courseParticipant.contact}" contactDisabled="${!vm.editMode}" />
 									</cell>
-								</row>
-								
+								</row>						
 								<row>
-									<cell  >
-										<vbox hflex="1">
-											<hbox>
-												<vbox>
-													<label value="${c:l('txt.ui.common.landRegNo')}"/>
-													<intbox id="particLandRegNo" readonly="@load(!vm.editMode)"
-														value="@bind(fx.application.courseParticipant.contact.landRegistryNumber)"
-														maxlength="11"
-														placeholder="*"
-														constraint="no empty"
-														sclass="form-input-text"
-														tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-														tabindex="11"
-														hflex="1" />
-												</vbox>
-												<vbox>
-													<label value="${c:l('txt.ui.common.houseNo')}"/>
-													<intbox id="particHouseNo" readonly="@load(!vm.editMode)"
-														value="@bind(fx.application.courseParticipant.contact.houseNumber)"
-														maxlength="6"
-														sclass="form-input-text"
-														tabindex="11"
-														hflex="1" />
-												</vbox>
-											</hbox>
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row>
-									<cell  >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.city')}"/>
-											<textbox id="particCity" readonly="@load(!vm.editMode)"
-												value="@bind(fx.application.courseParticipant.contact.city) @validator(vm.notNullValidator)"
-												maxlength="240"
-												placeholder="*"
-												sclass="form-input-text"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="12"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particCity])" >
-													<label value="@bind(vmsgs[particCity])" />
-												</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row>
-									<cell  >
-										<vbox hflex="1">
-											<label value="${c:l('txt.ui.common.zipCode')}"/>
-											<textbox id="particZipCode" readonly="@load(!vm.editMode)"
-												value="@bind(fx.application.courseParticipant.contact.zipCode) @validator(vm.notNullValidator)"
-												maxlength="32"
-												placeholder="*"
-												sclass="form-input-text"
-												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="13"
-												hflex="1" />
-											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
-												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particZipCode])" >
-													<label value="@bind(vmsgs[particZipCode])" />
-												</span>
-											</hbox>
-										</vbox>
-									</cell>
-								</row>
-								
-								<row    >
 									<cell  >
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.common.birthDate')}"/>
@@ -354,8 +261,7 @@
 			                            		format="@load(vm.dateFormat)" 
 			                            		maxlength="@load(vm.getDateMaxlength())"
 			                            		placeholder="*"
-			                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-			                            		tabindex="14" />
+			                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particBirthdate])" >
 													<label value="@bind(vmsgs[particBirthdate])" />
@@ -375,7 +281,6 @@
 												placeholder="*"
 												sclass="form-input-text"
 												tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
-												tabindex="16"
 												hflex="1" />
 											<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
 												<span sclass="alert alert-danger" hflex="min" visible="@load(not empty vmsgs[particHealthInsurance])" >
@@ -390,7 +295,7 @@
 										<vbox hflex="1">
 											<label value="${c:l('txt.ui.application.healthInfo')}"/>
 											<textbox rows="3" hflex="3" multiline="true" readonly="@load(!vm.editMode)"
-												value="@bind(fx.application.courseParticipant.healthInfo)" tabindex="17"
+												value="@bind(fx.application.courseParticipant.healthInfo)"
 												sclass="form-input-textarea"
 												maxlength="@load(vm.getHealthInfoMaxlength())" />
 										</vbox>
@@ -404,7 +309,7 @@
 						<hbox hflex="1" sclass="form-grid" 
 								visible="@load(vm.editMode and !vm.securedMode)" 
 								if="${vm.healthInfoConfirmRequired}" style="margin-top: 10px;">
-							<checkbox checked="@bind(vm.healthInfoAgreement)" tabindex="18" />
+							<checkbox checked="@bind(vm.healthInfoAgreement)" />
 							<vlayout>
 								<label value="${vm.healthAgreement}" />
 								<a label="${c:l('txt.ui.common.DocumentToDownload')}" 
@@ -417,7 +322,7 @@
 						<!-- Personal data process agreement -->
 						<hbox hflex="1" sclass="form-grid" visible="@load(vm.editMode and !vm.securedMode)" 
 								if="${vm.gdprConfirmRequired}" style="margin-top: 10px;">
-							<checkbox checked="@bind(vm.personalInfoProcessAgreement)" tabindex="19" />
+							<checkbox checked="@bind(vm.personalInfoProcessAgreement)" />
 							<vlayout>
 								<label value="${vm.persDataProcessAgreement}" />
 								<a label="${c:l('txt.ui.common.DocumentToDownload')}" 
@@ -431,7 +336,7 @@
 						<hbox hflex="1" sclass="form-grid" 
 								visible="@load(vm.editMode and !vm.securedMode)" 
 								if="${vm.clubRulesConfirmRequired}" style="margin-top: 10px;">
-							<checkbox checked="@bind(vm.clubRulesAgreement)" tabindex="19" />
+							<checkbox checked="@bind(vm.clubRulesAgreement)" />
 							<vlayout>
 								<label value="${vm.clubRulesText}" />
 								<a label="${c:l('txt.ui.common.DocumentToDownload')}" 
@@ -458,8 +363,7 @@
 							        visible="@load(vm.editMode and !vm.securedMode)" />
 
 								<button id="submit" 
-									label="Odeslat" 
-									tabindex="21"
+									label="Odeslat"
 									onClick="@command('submit')" 
 									iconSclass="z-icon-check"
 									style="margin-top: 20px;"
