--- a/scb-ui-zk/src/main/webapp/pages/common/component/ruian-address.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/component/ruian-address.zul
@@ -5,6 +5,7 @@
 	<custom-attributes foreignAddress="${empty(arg.foreignAddress) ? false : arg.foreignAddress}" />
 	
 	<custom-attributes placeValidationCmd="placeValidationCmd" />
+	<custom-attributes addressSubmitCmd="addressSubmitCmd" />
 	
 	<groupbox hflex="1"
 		closable="false"
@@ -22,9 +23,12 @@
 				value="@load(vm.contact.addressValidationStatus) @converter(vm.enumLabelConverter)" 
 				style="margin-top: 10px; background-color: #FFF3E7 !important; color: #FF8501; border: 1px solid #FF8501; padding-left: 15px; padding-right: 15px; border-radius: 14px;" />
 		</caption>
+		
 		<grid sclass="scb-form-grid-2" 
 			style="margin-left: 10px; margin-rignt: 10px;"
+			apply="com.jzaoralek.scb.ui.common.component.address.AddressComposer"
 			hflex="1" >
+			<custom-attributes submitBtn="${submitBtn}"/>
 			<rows>
 				<row>
 					<cell>
@@ -39,7 +43,7 @@
 							<combobox id="region" 
 								model="@load(vm.regionList)"
 								onSelect="@command('regionSelectCmd')"
-								selectedItem="@bind(vm.regionSelected) @save(vm.regionSelected, before={placeValidationCmd}) @validator(vm.notNullObjectValidator)"
+								selectedItem="@bind(vm.regionSelected) @save(vm.regionSelected, before={placeValidationCmd, addressSubmitCmd}) @validator(vm.notNullObjectValidator)"
 								placeholder="*"
 								style="background: white;"
 								if="${!contactDisabled}"
@@ -76,7 +80,7 @@
 							<!-- Mesto -->
 							<combobox id="city" 
 								model="@load(vm.municipalityListModel)"
-								selectedItem="@bind(vm.municipalityNameSelected) @save(vm.municipalityNameSelected, before={placeValidationCmd}) @validator(vm.notNullObjectValidator)"
+								selectedItem="@bind(vm.municipalityNameSelected) @save(vm.municipalityNameSelected, before={placeValidationCmd, addressSubmitCmd}) @validator(vm.notNullObjectValidator)"
 								onBlur="@command('municipaltitySelectCmd')"
 								autodrop="true"
 								placeholder="*"
@@ -176,7 +180,7 @@
 						<vbox hflex="1">
 							<label value="${c:l('txt.ui.common.zipCode')}"/>
 							<textbox id="zipCode"
-								value="@bind(vm.zip) @save(vm.zip, before={placeValidationCmd}) @validator(vm.notNullValidator)"
+								value="@bind(vm.zip) @save(vm.zip, before={placeValidationCmd, addressSubmitCmd}) @validator(vm.notNullValidator)"
 								onChange="@command('addressItemChangedCmd')"
 								maxlength="32"
 								placeholder="*"
@@ -199,6 +203,12 @@
 								onClick="@command(placeValidationCmd)" 
 								visible="@load(!vm.contact.addressValid)"
 								if="${!contactDisabled}" />
+							
+							<!-- Hidden button pro submit adresy vyvolavajiciho validaci, volany z tlacitka pro submit formulare, zaregistrovano v composeru -->
+							<button id="submitAddressBtn" 
+								label="Submit Address"
+								visible="false"
+								onClick="@command(addressSubmitCmd)"/>
 						</hlayout>
 					</cell>
 				</row>
